# ComfyUI_PHRenderFormerWrapper

./: .gitignore  LICENCE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  requirements_50xx.txt
.github/: FUNDING.yaml
example_assets/: phrenderformer_cube_00.mtl  phrenderformer_ph01_house_00.mtl  phrenderformer_ph01_terrain_00.mtl  phrenderformer_ph01_tree_00.mtl  phrenderformerbox_00.mtl  phrenderformertest_00.fbx  phrenderformertest_00.mtl  renderformertest01.mtl  renderformertest06.mtl  renderformertest_00.fbx
example_workflows/: ph_renderformer_advanced_01.json  ph_renderformer_basic_01.json
web/js/: PHRenderFormer.js
