[project]
name = "comfyui_phrenderformerwrapper"
description = "A Wrapper and a set of Custom Nodes for using RenderFormer as a 3d Environment in ComfyUI."
version = "0.5.0"
license = {file = "LICENSE"}
dependencies = ["torch==2.7.1+cu126", "torchvision", "numpy", "dacite", "einops", "roma", "huggingface_hub", "safetensors", "trimesh", "scipy", "pymeshlab", "h5py", "natsort", "imageio[ffmpeg]", "simple-ocio", "git+https://github.com/iamNCJ/renderformer-liger-kernel.git"]

[project.urls]
Repository = "https://github.com/paulh4x/ComfyUI_PHRenderFormerWrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "paulh4x"
DisplayName = "ComfyUI_PHRenderFormerWrapper"
Icon = "https://avatars.githubusercontent.com/u/40791699"